fixes horz scrolling on mobile

--- a/app/assets/stylesheets/_grid_index.css.scss
+++ b/app/assets/stylesheets/_grid_index.css.scss
@@ -34,8 +34,8 @@
 /* isotope requirements*/
 .grid{
   opacity: 0;
-	margin-left: -$grid-gutter-width;
-	margin-right: -$grid-gutter-width;
+	margin-left: -$grid-gutter-width/2;
+	margin-right: -$grid-gutter-width/2;
   &.ready{
     opacity: 1;
   }
